Page Content Added

--- a/classes.html
+++ b/classes.html
@@ -9,8 +9,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <nav>
+        <a href="index.html">Home</a> <br>
+        <a href="classes.html">Class Calander</a> <br>
+        <a href="info.html">Booking</a>
+    </nav>
+
+    <table>
+        <tr>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Saturday</th>
+            <th>Sunday</th>
+        </tr>
+        <tr>
+            <td>Cross Training<p>06:30 - 07:30</p><p>Kelly Johnson</p></td>
+            <td><p></p></td>
+            <td>Cross Training<p>06:30 - 07:30</p><p>Kelly Johnson</p></td>
+            <td><p></p></td>
+            <td>Cross Training<p>06:30 - 07:30</p><p>Kelly Johnson</p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+        </tr>
+        <tr>
+            <td>Sprint<p>08:00 - 08:30</p><p>Annette Farouki</p></td>
+            <td><p></p></td>
+            <td>Sprint<p>08:00 - 08:30</p><p>Annette Farouki</p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+            <td>Spin<p>08:00 - 08:45</p><p>Kelly Johnson</p></td>
+            <td><p></p></td>
+        </tr>
+        <tr>
+            <td><p></p></td>
+            <td>Spin<p>08:30 - 09:30</p><p>Kelly Johnson</p></td>
+            <td><p></p></td>
+            <td>Spin<p>08:30 - 09:30</p><p>Kelly Johnson</p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+        </tr>
+        <tr>
+            <td>BodyPump<p>09:00 - 10:00</p></td>
+            <td>BodyCombat<p>09:00 - 10:00</p><p>Annette Farouki</p></td>
+            <td>BodyPump<p>09:00 - 10:00</p></td>
+            <td>BodyCombat<p>09:00 - 10:00</p><p>Annette Farouki</p></td>
+            <td>BodyPump<p>09:00 - 10:00</p></td>
+            <td>BodyPump<p>09:00 - 10:00</p><p>Lea Anne Latimer</p></td>
+            <td><p></p></td>
+        </tr>
+        <tr>
+            <td><p></p></td>
+            <td>Step Interval<p>17:30 - 18:30</p><p>Colleen Merrigan</p></td>
+            <td><p></p></td>
+            <td>Step Interval<p>17:30 - 18:30</p><p>Colleen Merrigan</p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+        </tr>
+        <tr>
+            <td>Advanced Cross Training<p>17:45 - 18:45</p><p>Brooke Henderson</p></td>
+            <td><p></p></td>
+            <td>Advanced Cross Training<p>17:45 - 18:45</p><p>Brooke Henderson</p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+        </tr>
+        <tr>
+            <td>MixedFIT<p>19:00 - 20:00</p></td>
+            <td><p></p></td>
+            <td>Zumba<p>19:00 - 20:00</p><p>Angela Esquivel-Zahner</p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+            <td><p></p></td>
+        </tr>
+    </table>
 </body>
 </html>
