--- a/index.html
+++ b/index.html
@@ -9,8 +9,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div>
+        <h1>Welcome to Fit For Fun Fitness Club!</h1>
+    </div>
+
+    <nav>
+        <a href="index.html">Home</a> <br>
+        <a href="classes.html">Class Calander</a> <br>
+        <a href="info.html">Booking</a>
+    </nav>
+
+    <div>
+        <img src="img/yoga.jpeg" alt="yoga" width="200">
+        <img src="img/trainer.jpg" alt="trainer" width="280">
+        <img src="img/spinning.jpg" alt="spinning" width="750">
+    </div>
 </body>
 </html>
