Style added to home page and class calander page

--- a/classes.html
+++ b/classes.html
@@ -20,13 +20,13 @@
 
     <table>
         <tr>
-            <th>Monday</th>
-            <th>Tuesday</th>
-            <th>Wednesday</th>
-            <th>Thursday</th>
-            <th>Friday</th>
-            <th>Saturday</th>
-            <th>Sunday</th>
+            <th>Monday, Jun 15</th>
+            <th>Tuesday, Jun 16</th>
+            <th>Wednesday, Jun 17</th>
+            <th>Thursday, Jun 18</th>
+            <th>Friday, Jun 19</th>
+            <th>Saturday, Jun 20</th>
+            <th>Sunday, Jun 21</th>
         </tr>
         <tr>
             <td>Cross Training<p>06:30 - 07:30</p><p>Kelly Johnson</p></td>
@@ -56,12 +56,12 @@
             <td><p></p></td>
         </tr>
         <tr>
-            <td>BodyPump<p>09:00 - 10:00</p></td>
-            <td>BodyCombat<p>09:00 - 10:00</p><p>Annette Farouki</p></td>
-            <td>BodyPump<p>09:00 - 10:00</p></td>
-            <td>BodyCombat<p>09:00 - 10:00</p><p>Annette Farouki</p></td>
-            <td>BodyPump<p>09:00 - 10:00</p></td>
-            <td>BodyPump<p>09:00 - 10:00</p><p>Lea Anne Latimer</p></td>
+            <td>Body Pump<p>09:00 - 10:00</p><p>Lea Anne Latimer</p></td>
+            <td>Body Combat<p>09:00 - 10:00</p><p>Annette Farouki</p></td>
+            <td>Body Pump<p>09:00 - 10:00</p><p>Lea Anne Latimer</p></td>
+            <td>Body Combat<p>09:00 - 10:00</p><p>Annette Farouki</p></td>
+            <td>Body Pump<p>09:00 - 10:00</p><p>Lea Anne Latimer</p></td>
+            <td>Body Pump<p>09:00 - 10:00</p><p>Lea Anne Latimer</p></td>
             <td><p></p></td>
         </tr>
         <tr>
@@ -83,7 +83,7 @@
             <td><p></p></td>
         </tr>
         <tr>
-            <td>MixedFIT<p>19:00 - 20:00</p></td>
+            <td>MixedFIT<p>19:00 - 20:00</p><p>Brooke Henderson</p></td>
             <td><p></p></td>
             <td>Zumba<p>19:00 - 20:00</p><p>Angela Esquivel-Zahner</p></td>
             <td><p></p></td>
@@ -92,5 +92,10 @@
             <td><p></p></td>
         </tr>
     </table>
+
+    <footer>
+        <h4>Fit for Fun Fitness Club</h4>
+        <p id="contactinfo">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
+    </footer>
 </body>
 </html>
