--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>
-        <h1>Welcome to Fit For Fun Fitness Club!</h1>
-    </div>
-
     <nav>
         <a href="index.html">Home</a> <br>
         <a href="classes.html">Class Calander</a> <br>
         <a href="info.html">Booking</a>
     </nav>
 
-    <div>
-        <img src="img/yoga.jpeg" alt="yoga" width="200">
-        <img src="img/trainer.jpg" alt="trainer" width="280">
-        <img src="img/spinning.jpg" alt="spinning" width="750">
+    <div id="homebody">
+        <h1>Welcome to Fit For Fun Fitness Club!</h1>
+
+        <img src="img/yoga.jpg" alt="yoga" width="500"> <br>
+        <img src="img/trainer.jpg" alt="trainer" width="500"> <br>
+        <img src="img/spinning.jpg" alt="spinning" width="500">
     </div>
+
+    <footer>
+        <h4>Fit for Fun Fitness Club &copy; 2023</h4>
+        <p id="contactinfo">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
+    </footer>
 </body>
 </html>
