--- a/info.html
+++ b/info.html
@@ -116,6 +116,10 @@
         </form>
     </div>
 
+    <footer>
+        <h4>Fit for Fun Fitness Club</h4>
+        <p id="contactinfo">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
+    </footer>
 </body>
 
 </html>
