Style Added to All Pages

--- a/classes.html
+++ b/classes.html
@@ -95,7 +95,7 @@
 
     <footer>
         <h4>Fit for Fun Fitness Club</h4>
-        <p id="contactinfo">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
+        <p id="reachus">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
     </footer>
 </body>
 </html>
