--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="info.html">Booking</a>
     </nav>
 
-    <div id="homebody">
+    <div id="storage">
         <h1>Welcome to Fit For Fun Fitness Club!</h1>
 
         <img src="img/yoga.jpg" alt="yoga" width="500"> <br>
@@ -28,7 +28,7 @@
 
     <footer>
         <h4>Fit for Fun Fitness Club &copy; 2023</h4>
-        <p id="contactinfo">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
+        <p id="reachus">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
     </footer>
 </body>
 </html>
