--- a/info.html
+++ b/info.html
@@ -20,10 +20,10 @@
         <a href="info.html">Booking</a>
     </nav>
 
-    <div>
+    <div id="form">
         <h2>Book some classes today!</h2>
         <form method="get" action="thankyou.html">
-            <fieldset>
+            <fieldset id="contactinfo">
                 <legend>
                     Contact Information
                 </legend>
@@ -112,13 +112,13 @@
                         placeholder="Please enter any addtional comments or concerns here!"></textarea>
                 </label>
             </fieldset>
-
+            <input type="submit" value="Submit" class="submit">
         </form>
     </div>
 
     <footer>
         <h4>Fit for Fun Fitness Club</h4>
-        <p id="contactinfo">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
+        <p id="reachus">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
     </footer>
 </body>
 
