--- a/thankyou.html
+++ b/thankyou.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <div class="storage">
+  <div id="storage">
     <h2>Thank you for requesting an appt! We will be in touch soon!</h2>
 
     <script>
