--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- 
         Author:     Tyler Pitcock
@@ -11,6 +12,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <nav>
         <a href="index.html">Home</a> <br>
@@ -28,7 +30,9 @@
 
     <footer>
         <h4>Fit for Fun Fitness Club &copy; 2023</h4>
-        <p id="reachus">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
+        <p id="reachus">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a
+                href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
     </footer>
 </body>
+
 </html>
