--- a/classes.html
+++ b/classes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- 
         Author:     Tyler Pitcock
@@ -11,6 +12,7 @@
     <title>Classes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <nav>
         <a href="index.html">Home</a> <br>
@@ -29,73 +31,173 @@
             <th>Sunday, Jun 21</th>
         </tr>
         <tr>
-            <td>Cross Training<p>06:30 - 07:30</p><p>Kelly Johnson</p></td>
-            <td><p></p></td>
-            <td>Cross Training<p>06:30 - 07:30</p><p>Kelly Johnson</p></td>
-            <td><p></p></td>
-            <td>Cross Training<p>06:30 - 07:30</p><p>Kelly Johnson</p></td>
-            <td><p></p></td>
-            <td><p></p></td>
+            <td>Cross Training<p>06:30 - 07:30</p>
+                <p>Kelly Johnson</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>Cross Training<p>06:30 - 07:30</p>
+                <p>Kelly Johnson</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>Cross Training<p>06:30 - 07:30</p>
+                <p>Kelly Johnson</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>
+                <p></p>
+            </td>
         </tr>
         <tr>
-            <td>Sprint<p>08:00 - 08:30</p><p>Annette Farouki</p></td>
-            <td><p></p></td>
-            <td>Sprint<p>08:00 - 08:30</p><p>Annette Farouki</p></td>
-            <td><p></p></td>
-            <td><p></p></td>
-            <td>Spin<p>08:00 - 08:45</p><p>Kelly Johnson</p></td>
-            <td><p></p></td>
+            <td>Sprint<p>08:00 - 08:30</p>
+                <p>Annette Farouki</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>Sprint<p>08:00 - 08:30</p>
+                <p>Annette Farouki</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>Spin<p>08:00 - 08:45</p>
+                <p>Kelly Johnson</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
         </tr>
         <tr>
-            <td><p></p></td>
-            <td>Spin<p>08:30 - 09:30</p><p>Kelly Johnson</p></td>
-            <td><p></p></td>
-            <td>Spin<p>08:30 - 09:30</p><p>Kelly Johnson</p></td>
-            <td><p></p></td>
-            <td><p></p></td>
-            <td><p></p></td>
+            <td>
+                <p></p>
+            </td>
+            <td>Spin<p>08:30 - 09:30</p>
+                <p>Kelly Johnson</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>Spin<p>08:30 - 09:30</p>
+                <p>Kelly Johnson</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>
+                <p></p>
+            </td>
         </tr>
         <tr>
-            <td>Body Pump<p>09:00 - 10:00</p><p>Lea Anne Latimer</p></td>
-            <td>Body Combat<p>09:00 - 10:00</p><p>Annette Farouki</p></td>
-            <td>Body Pump<p>09:00 - 10:00</p><p>Lea Anne Latimer</p></td>
-            <td>Body Combat<p>09:00 - 10:00</p><p>Annette Farouki</p></td>
-            <td>Body Pump<p>09:00 - 10:00</p><p>Lea Anne Latimer</p></td>
-            <td>Body Pump<p>09:00 - 10:00</p><p>Lea Anne Latimer</p></td>
-            <td><p></p></td>
+            <td>Body Pump<p>09:00 - 10:00</p>
+                <p>Lea Anne Latimer</p>
+            </td>
+            <td>Body Combat<p>09:00 - 10:00</p>
+                <p>Annette Farouki</p>
+            </td>
+            <td>Body Pump<p>09:00 - 10:00</p>
+                <p>Lea Anne Latimer</p>
+            </td>
+            <td>Body Combat<p>09:00 - 10:00</p>
+                <p>Annette Farouki</p>
+            </td>
+            <td>Body Pump<p>09:00 - 10:00</p>
+                <p>Lea Anne Latimer</p>
+            </td>
+            <td>Body Pump<p>09:00 - 10:00</p>
+                <p>Lea Anne Latimer</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
         </tr>
         <tr>
-            <td><p></p></td>
-            <td>Step Interval<p>17:30 - 18:30</p><p>Colleen Merrigan</p></td>
-            <td><p></p></td>
-            <td>Step Interval<p>17:30 - 18:30</p><p>Colleen Merrigan</p></td>
-            <td><p></p></td>
-            <td><p></p></td>
-            <td><p></p></td>
+            <td>
+                <p></p>
+            </td>
+            <td>Step Interval<p>17:30 - 18:30</p>
+                <p>Colleen Merrigan</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>Step Interval<p>17:30 - 18:30</p>
+                <p>Colleen Merrigan</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>
+                <p></p>
+            </td>
         </tr>
         <tr>
-            <td>Advanced Cross Training<p>17:45 - 18:45</p><p>Brooke Henderson</p></td>
-            <td><p></p></td>
-            <td>Advanced Cross Training<p>17:45 - 18:45</p><p>Brooke Henderson</p></td>
-            <td><p></p></td>
-            <td><p></p></td>
-            <td><p></p></td>
-            <td><p></p></td>
+            <td>Advanced Cross Training<p>17:45 - 18:45</p>
+                <p>Brooke Henderson</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>Advanced Cross Training<p>17:45 - 18:45</p>
+                <p>Brooke Henderson</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>
+                <p></p>
+            </td>
         </tr>
         <tr>
-            <td>MixedFIT<p>19:00 - 20:00</p><p>Brooke Henderson</p></td>
-            <td><p></p></td>
-            <td>Zumba<p>19:00 - 20:00</p><p>Angela Esquivel-Zahner</p></td>
-            <td><p></p></td>
-            <td><p></p></td>
-            <td><p></p></td>
-            <td><p></p></td>
+            <td>MixedFIT<p>19:00 - 20:00</p>
+                <p>Brooke Henderson</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>Zumba<p>19:00 - 20:00</p>
+                <p>Angela Esquivel-Zahner</p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>
+                <p></p>
+            </td>
+            <td>
+                <p></p>
+            </td>
         </tr>
     </table>
 
     <footer>
         <h4>Fit for Fun Fitness Club</h4>
-        <p id="reachus">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
+        <p id="reachus">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a
+                href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
     </footer>
 </body>
+
 </html>
