--- a/info.html
+++ b/info.html
@@ -118,7 +118,8 @@
 
     <footer>
         <h4>Fit for Fun Fitness Club</h4>
-        <p id="reachus">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
+        <p id="reachus">&bull; Call us @ <a href="tel:417-555-5555">4175555555</a> &bull; Email us @ <a
+                href="mailto:fitforfunfitness@email.com">fitforfunfitness@email.com</a></p>
     </footer>
 </body>
 
