Updated Final Additions

--- a/info.html
+++ b/info.html
@@ -112,7 +112,9 @@
                         placeholder="Please enter any addtional comments or concerns here!"></textarea>
                 </label>
             </fieldset>
-            <input type="submit" value="Submit" class="submit">
+            <div id="search">
+            <input type="submit" value="Submit" style="height: 2em; width: 25em;">
+            </div>
         </form>
     </div>
 
